# pmcp

./: .clang-tidy  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
share/: config.toml  default_theme.toml  keymap.toml
src/: Action.hh  AtomicLifo.hh  AudioBuffer.hh  Config.cc  Config.hh  Element.hh  EventLoop.cc  EventLoop.hh  FFT.hh  Help.cc  Help.hh  Keymap.cc  Keymap.hh  Lyrics.cc  Lyrics.hh  Msg.hh  Options.hh  PImpl.hh  Player.cc  Player.hh  PlayerView.cc  PlayerView.hh  Playlist.cc  Playlist.hh  Playqueue.cc  Playqueue.hh  Scrollable.cc  Scrollable.hh  Server.cc  Server.hh  Sink.cc  Sink.hh  Source.cc  Source.hh  Spectralizer.hh  Status.hh  StreamParams.hh  Terminal.cc  Terminal.hh  Theme.cc  (+13 more)
